--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,10 @@
 name: any_icon_maker
-publish_to: "none"
+description: A configurable icon maker.
+version: 0.0.1
+homepage: https://github.com/makeanyicon/any_icon_maker
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  args: ^2.2.0
   image: ^3.0.5
-  yaml: ^3.1.0
-
-dev_dependencies:
-  lints: ^1.0.1
-
-executables:
-  any_icon_maker: main
